[package]
name = "home"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["macros"] }
serde_json = "1.0"
lambda_runtime = { version = "0.5.1" }
lambda_http = { version = "0.5.1" }
serde_derive = "1.0.147"
serde = "1.0.147"
aws-sdk-s3 = "0.21.0"
aws-config = "0.51.0"
