[package]
name = "pins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["macros"] }
serde_json = "1.0"
lambda_runtime = { version = "0.5.1" }
lambda_http = { version = "0.5.1" }
serde_derive = "1.0.147"
serde = "1.0.147"
aws-sdk-dynamodb = "0.21.0"
aws-config = "0.51.0"
tokio-stream = "0.1.11"
env_logger = "0.9.3"
